[gd_scene load_steps=5 format=3 uid="uid://bodmudpnxwfsm"]

[ext_resource type="Script" uid="uid://bodl2ah0x326c" path="res://addons/dialogic_additions/ShowImage/ShowImageLayer.gd" id="1_isnca"]
[ext_resource type="Script" uid="uid://dhr7iupu782wq" path="res://scripts/ui/UIControl.gd" id="2_5h6qi"]
[ext_resource type="Script" uid="uid://bh70ep5eea3np" path="res://scripts/ui/InputCapture.gd" id="2_mpt1i"]
[ext_resource type="Texture2D" uid="uid://6vnurrrg4ptv" path="res://assets/placeholders/feather.png" id="3_l3cjj"]

[node name="ShowImageLayer" type="Node" groups=["show_image_layer"]]
script = ExtResource("1_isnca")
metadata/_custom_type_script = "uid://bodl2ah0x326c"

[node name="InputCapture" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_mpt1i")

[node name="show_image_control" type="Control" parent="InputCapture"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_5h6qi")
transition_style = 1
duration = 1.5
metadata/_custom_type_script = "uid://dhr7iupu782wq"

[node name="ColorRect" type="ColorRect" parent="InputCapture/show_image_control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.564706)

[node name="TextureRect" type="TextureRect" parent="InputCapture/show_image_control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -896.0
offset_top = -476.0
offset_right = 896.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_l3cjj")
expand_mode = 3
stretch_mode = 5
